--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ body {
+        margin: 0;
+        padding: 0;
+        min-height:100vh;
+        background: linear-gradient(#B0EACD, #FFFFFF);
+        background-size:cover;
+        font-family: 'Roboto', sans-serif;
+      }
+      
+      .input-row {
+        display: flex;
+        gap: 15px; /* Espaçamento entre os inputs */
+        margin-top: 20px;
+      }
+      
+      .input-item {
+        flex: 1; /* Distribui igualmente o espaço entre os inputs */
+      }
+      
+      /* Ajuste para dispositivos menores */
+      @media (max-width: 768px) {
+        .input-row {
+          flex-direction: column; /* Empilha os inputs em telas menores */
+        }
+      }
+      
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.containerBase {
+    padding:20px;
 }
